# oculos

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  openapi.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: 01_list_windows.py  02_find_and_click.py  03_type_in_notepad.py  04_highlight_all_buttons.py  05_batch_operations.py  06_wait_for_element.py  07_curl_cheatsheet.sh  README.md
sdk/python/: README.md  pyproject.toml  test_sdk.py
sdk/python/oculos/: __init__.py  client.py
sdk/typescript/: README.md  package.json  test_sdk.mjs
sdk/typescript/src/: client.ts  index.ts  types.ts
src/: main.rs  mcp.rs  types.rs
src/api/: interact.rs  mod.rs  windows.rs  ws.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
static/: index.html
