[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculos-sdk"
version = "0.1.0"
description = "Python SDK for OculOS — control any desktop app through JSON"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ui-automation", "accessibility", "desktop", "api", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Desktop Environment",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/huseyinstif/oculos"
Repository = "https://github.com/huseyinstif/oculos/tree/main/sdk/python"
Issues = "https://github.com/huseyinstif/oculos/issues"
